--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "shorterLinks",
   "main": "index.js",
   "scripts": {
+    "start": "npm start",
     "devStart": "nodemon server.js"
   },
   "author": "Brian Ogas",
