--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "shorterLinks",
   "main": "index.js",
   "scripts": {
-    "start": "npm start",
-    "devStart": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "Brian Ogas",
   "license": "ISC",
