--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shorterLinks",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Brian Ogas",
   "license": "ISC",
